# exalsius-cli

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  PR_SUMMARY.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yml  release-please.yml
exalsius/: app.py  cli.py  config.py  exceptions.py  state.py
exalsius/auth/: cli.py  commands.py  display.py  models.py  operations.py  service.py
exalsius/base/: service.py
exalsius/cli/: __init__.py  app.py  auth.py  config.py  logging.py  state.py  utils.py
exalsius/cli/auth/: __init__.py  cli.py  display.py  models.py  operations.py  service.py
exalsius/cli/commands/: clusters.py  login.py  management.py  nodes.py  offers.py  workspaces.py
exalsius/cluster_templates/: cli.py  commands.py  display.py  models.py  operations.py  service.py
exalsius/clusters/: cli.py  commands.py  display.py  domain.py  dtos.py  interactive.py  models.py  operations.py  service.py
exalsius/clusters/gateway/: base.py  commands.py  sdk.py
exalsius/commands/: clouds.py  colony.py  jobs.py  scan_prices.py
exalsius/commands/clouds/: cli.py  operations.py
exalsius/commands/colony/: cli.py  operations.py
exalsius/commands/jobs/: cli.py  operations.py
exalsius/commands/scan_prices/: cli.py  operations.py
exalsius/core/auth/: cli.py  models.py  operations.py  service.py
exalsius/core/base/: commands.py  deserializer.py  display.py  exceptions.py  models.py  render.py  service.py
exalsius/core/commons/: __init__.py  commands.py  display.py  (+5 more)
exalsius/display/: auth_display.py  base.py  cloud_credentials_display.py  clouds_display.py  cluster_template_display.py  clusters_display.py  colony_display.py  common.py  job_display.py  login_display.py  nodes_display.py  offers_display.py  scan_prices_display.py  ssh_key_display.py  workspaces_display.py
exalsius/kubernetes/: client.py  logs.py  resources.py
exalsius/management/: __init__.py  cli.py  models.py
exalsius/nodes/: __init__.py  cli.py  commands.py  display.py  domain.py  dtos.py  interactive.py  models.py  operations.py  service.py
exalsius/offers/: __init__.py  cli.py  commands.py  display.py  dtos.py  models.py  operations.py  service.py
exalsius/services/: cli.py  clouds_service.py  colony_service.py  commands.py  display.py  domain.py  dtos.py  models.py  scan_prices_service.py  service.py  suggestion_service.py
exalsius/templates/: colony-template.yaml-old.j2  colony-template.yaml.j2  remote-machine.yaml.j2
exalsius/utils/: cli_utils.py  cloud_utils.py  commons.py  k8s_utils.py  price_utils.py  theme.py
exalsius/workspaces/: __init__.py  cli.py  commands.py  display.py  domain.py  dtos.py  models.py  operations.py  service.py
examples/: cluster-config.yaml  docker-colony.yaml  example-ddp-cpu-job.yaml  example-job-with-gpus.yaml  example-job.yaml
exls/: app.py  config.py  defaults.py  logging.py  state.py
exls/auth/: app.py  cli.py  commands.py  display.py  domain.py  dtos.py  models.py  service.py
exls/clusters/: app.py  cli.py  display.py  domain.py  dtos.py  mappers.py  service.py
exls/management/: app.py  cli.py
exls/nodes/: app.py  cli.py  display.py  domain.py  dtos.py  service.py
exls/offers/: app.py  cli.py  display.py  domain.py  dtos.py  service.py
exls/services/: app.py  cli.py  display.py  domain.py  dtos.py  service.py
exls/utils/: commons.py
exls/workspaces/: app.py  cli.py  deploy_dtos.py  display.py  domain.py  dtos.py  mappers.py  service.py
tests/: conftest.py
tests/e2e/: test_auth_flow.py  test_cluster_deploy.py
tests/unit/: test_app.py  test_dummy_app.py
(+544 files in other folders)
