[project]
name = "exalsius"
version = "0.2.0"
description = "The exalsius CLI"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "kubernetes>=32.0.1",
    "rich>=13.9.4",
    "typer>=0.15.2",
    "pandas>=2.2.3",
    "exalsius-api-client @ git+https://github.com/exalsius/exalsius-api-spec.git@v1.9.1#subdirectory=client-sdk",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "filelock>=3.17.0",
    "termcolor>=2.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["exalsius*"] 

[project.scripts]
exls = "exalsius.cli.app:app" 

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.9",
]
